# zephyr

drivers/led_strip/: Kconfig.ws2812  ws2812_gpio.c
tests/drivers/led_strip/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/led_strip/boards/: native_posix.overlay
tests/drivers/led_strip/src/: main.c
